# cocotron

./: CMakeLists.txt
CMake/: Cocotron.cmake
Foundation/: CMakeLists.txt
Foundation/NSUserDefaults/: NSUserDefaults.m
Foundation/objc/platform_darwin/: OBJCInitializeProcess_Darwin.m
Foundation/objc/platform_linux/: objc-msgsend.s
objc/: CMakeLists.txt
