PROJECT(Cocotron)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

INCLUDE(CMake/Cocotron.cmake)

IF(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
	SET(COCOTRON_PLATFORM_ "darwin")
ELSEIF(${CMAKE_SYSTEM_NAME} STREQUAL "OpenBSD")
	SET(COCOTRON_PLATFORM_ "bsd")
ENDIF(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
SET(COCOTRON_PLATFORM "${COCOTRON_PLATFORM_}" CACHE STRING "Target cocotron platform")
MESSAGE("Platform ${CMAKE_SYSTEM_NAME} was detected as ${COCOTRON_PLATFORM_} and set to ${COCOTRON_PLATFORM}")

ADD_SUBDIRECTORY(objc)
ADD_SUBDIRECTORY(Foundation)